[package]
name = "sv4state"
version = "0.2.1-alpha.0"
edition = "2018"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv4state"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "SystemVerilog 4-state value library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
